# presidents-rag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  app.py  artifact_filenames.pickle  backend.py  chunk_text.py  create_artifacts.py  create_chroma_db.py  download_weights.py  environment.yml  ingest.py  knowledge_base.py  main.py  modal_server.py  pyproject.toml  scrape_wikipedia.py  vector_store.py  vector_store_client.py  vector_store_create.py
.claude/: launch.json
alembic/: env.py
backend/: modal_server.py  retrieval.py  schemas.py  server.py
chunks/: abel_p_upshur__chunk_000.txt  abel_p_upshur__chunk_001.txt  abel_p_upshur__chunk_002.txt  abel_p_upshur__chunk_003.txt  abel_p_upshur__chunk_004.txt  abel_p_upshur__chunk_005.txt  abel_p_upshur__chunk_006.txt  abel_p_upshur__chunk_007.txt  abraham_lincoln__chunk_000.txt  abraham_lincoln__chunk_001.txt  abraham_lincoln__chunk_002.txt  abraham_lincoln__chunk_003.txt  abraham_lincoln__chunk_004.txt  abraham_lincoln__chunk_005.txt  abraham_lincoln__chunk_006.txt  abraham_lincoln__chunk_007.txt  abraham_lincoln__chunk_008.txt  abraham_lincoln__chunk_009.txt  abraham_lincoln__chunk_010.txt  abraham_lincoln__chunk_011.txt  abraham_lincoln__chunk_012.txt  abraham_lincoln__chunk_013.txt  abraham_lincoln__chunk_014.txt  abraham_lincoln__chunk_015.txt  abraham_lincoln__chunk_016.txt  abraham_lincoln__chunk_017.txt  abraham_lincoln__chunk_018.txt  abraham_lincoln__chunk_019.txt  abraham_lincoln__chunk_020.txt  abraham_lincoln__chunk_021.txt  abraham_lincoln__chunk_022.txt  abraham_lincoln__chunk_023.txt  abraham_lincoln__chunk_024.txt  abraham_lincoln__chunk_025.txt  abraham_lincoln__chunk_026.txt  abraham_lincoln__chunk_027.txt  abraham_lincoln__chunk_028.txt  abraham_lincoln__chunk_029.txt  abraham_lincoln__chunk_030.txt  abraham_lincoln__chunk_031.txt  (+5183 more)
db/: models.py  session.py
evals/: evaluators.py  run_eval_generation.py  run_eval_retrieval.py  schemas.py  tasks.py
frontend/: agent.py  app.py  client.py
scripts/: download_weights.py  ingest.py  miller_center_presidents.json  people.py  run_agent.py  scrape_miller_center.py  scrape_wikipedia.py
text/: abraham_lincoln.txt  alexander_haig.txt  andrew_jackson.txt  antony_blinken.txt  benjamin_harrison.txt  bill_clinton.txt  charles_e_bohlen.txt  charles_evans_hughes.txt  colin_powell.txt  condoleezza_rice.txt  donald_trump.txt  (+50 more)
(+93 files in other folders)
