[tool.poetry]
name = "presidents-rag"
version = "0.1.0"
description = ""
authors = ["Justin Pyron <justinpyron@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
torch = "^2.5.1"
transformers = "^4.46.2"
sentence-transformers = "^3.3.0"
accelerate = "^1.1.1"
openai = "^2.6.0"
scipy = "^1.14.1"
ipykernel = "^6.29.5"
jupyterlab = "^4.3.0"
streamlit = "^1.40.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
pre-commit = "^4.0.1"
chromadb = "^0.5.23"
langchain = "^0.3.13"
langchain-community = "^0.3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
