[project]
name = "presidents-rag"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.4",
    "openai>=2.6.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.40.1",
]

[dependency-groups]
dev = [
    "accelerate>=1.1.1",
    "beautifulsoup4>=4.12.3",
    "chromadb>=0.5.23",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.0",
    "langchain>=0.3.13",
    "langchain-community>=0.3.13",
    "lxml>=5.3.0",
    "modal>=1.2.5",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "scipy>=1.14.1",
    "sentence-transformers>=3.3.0",
    "torch>=2.5.1",
    "transformers>=4.46.2",
]
