[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "presidents-rag"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "accelerate>=1.14.0",
    "alembic>=1.18.4",
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "fastapi>=0.115.0",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "langchain>=1.3.11",
    "lxml>=6.1.1",
    "modal>=1.5.0",
    "numpy>=2.5.0",
    "pgvector>=0.4.2",
    "pandas>=3.0.3",
    "pre-commit>=4.6.0",
    "scipy>=1.18.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "psycopg[binary]>=3.3.4",
]

[tool.hatch.build.targets.wheel]
packages = ["db"]
